# language-server

./: Cargo.toml  LICENSE  README.md
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: coverage.yml  deploy.yml  main.yml
examples/: Cargo.toml  async-std.rs  server.rs  tokio.rs
language-server/: Cargo.toml
language-server-derive/: Cargo.toml
language-server-derive/src/: error.rs  lib.rs  method.rs
language-server-macros/: Cargo.toml  README.md
language-server-macros/src/: client.rs  server.rs
language-server/src/: client.rs  codec.rs  jsonrpc.rs  lib.rs  middleware.rs  server.rs
language-server/tests/: integration.rs
