[package]
name = "examples"
publish = false
version = "0.1.0"
edition = "2018"

[dev-dependencies]
async-std = "1.5.0"
async_executors = { version = "0.2", features = ["tokio_tp", "async_std"] }
language-server = { path = "../language-server" }
stderrlog = "0.4"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["compat"] }

[[example]]
name = "server"
path = "server.rs"

[[example]]
name = "async-std"
path = "async-std.rs"