[package]
name = "language-server-macros"
description = "Procedural macros for the language-server crate."
version = "0.1.0"
license = "MIT"
authors = [
    "Eric Förster <eric.foerster@outlook.com>", 
    "Patrick Förster <patrick.foerster@outlook.de>"]
readme = "README.md"
repository = "https://github.com/latex-lsp/language-server"
edition = "2018"

[lib]
proc-macro = true
doctest = false

[dependencies]
darling = "0.10"
syn = "1.0"
quote = "1.0"
