[package]
name = "language-server"
description = "A library to implement asynchronous language servers in Rust."
version = "0.1.0"
license = "MIT"
authors = [
    "Eric Förster <eric.foerster@outlook.com>", 
    "Patrick Förster <patrick.foerster@outlook.de>"]
readme = "../README.md"
repository = "https://github.com/latex-lsp/language-server"
categories = ["development-tools"]
keywords = ["lsp"]
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
proposed = ["lsp-types/proposed"]

[dependencies]
async-trait = "0.1"
bytes = "0.5"
futures = "0.3"
futures_codec = "0.4"
language-server-macros = { version = "0.1.0", path = "../language-server-macros" }
log = "0.4"
lsp-types = "0.79"
nom = "5.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
serde_repr = "0.1"
typed-builder = "0.7"

[dev-dependencies]
async_executors = { version = "0.2", features = ["tokio_tp"] }
indoc = "1.0"
mockall = "0.7"
sluice = "0.5"
tokio = "1.9"
tokio-util = { version = "0.3", features = ["compat"] }
